// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`static assign 1`] = `
Program {
  "children": Array [
    Static {
      "kind": "static",
      "variables": Array [
        StaticVariable {
          "defaultValue": Number {
            "kind": "number",
            "value": "1",
          },
          "kind": "staticvariable",
          "variable": Variable {
            "curly": false,
            "kind": "variable",
            "name": "foo",
          },
        },
      ],
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`static multiple 1`] = `
Program {
  "children": Array [
    Static {
      "kind": "static",
      "variables": Array [
        StaticVariable {
          "defaultValue": Number {
            "kind": "number",
            "value": "1",
          },
          "kind": "staticvariable",
          "variable": Variable {
            "curly": false,
            "kind": "variable",
            "name": "foo",
          },
        },
        StaticVariable {
          "defaultValue": Number {
            "kind": "number",
            "value": "2",
          },
          "kind": "staticvariable",
          "variable": Variable {
            "curly": false,
            "kind": "variable",
            "name": "bar",
          },
        },
        StaticVariable {
          "defaultValue": Number {
            "kind": "number",
            "value": "3",
          },
          "kind": "staticvariable",
          "variable": Variable {
            "curly": false,
            "kind": "variable",
            "name": "baz",
          },
        },
      ],
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`static simple 1`] = `
Program {
  "children": Array [
    Static {
      "kind": "static",
      "variables": Array [
        Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
      ],
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
